fix overflow scroll.

--- a/src/Pages/Home.module.scss
+++ b/src/Pages/Home.module.scss
@@ -1,7 +1,6 @@
 @import '../styles/config';
 
 .group {
-  overflow: auto;
   display: flex;
   width: 90%;
   height: 100%;
